--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,4 +1,8 @@
 img{
+  /* Added by me */
+  max-height: 300px;    
+  object-fit: contain;
+  /* Added by me */
   width: 60%;
   align-self: center;
 }
